# Talky

./: .gitignore  CMakeLists.txt  build.bat  build.sh  conanfile.txt
src/: Application.cpp  Application.h  ChatPanel.cpp  ChatPanel.h  glIncl.h  main.cpp
